@@ -14,6 +14,14 @@
 
 #include "config.h"
 
+#ifdef HAVE_SYS_TYPES_H
+#include <sys/types.h>
+#endif
+
+#ifdef HAVE_SYS_TIME_H
+#include <sys/time.h>
+#endif
+
 #if defined(HAVE_SYS_RESOURCE_H)
 #include <sys/resource.h>
 #endif
